[tool.poetry]
name = "rr-hn-upvotes"
version = "0.1.0"
description = ""
authors = ["sid"]
license = "MIT"
readme = "README.md"
packages = [{ include = "rr_hn_upvotes", from = "src" }]
[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.1"
jupyter = "^1.0.0"
matplotlib = "^3.8.3"
pandas = "^2.2.1"
sqlalchemy = "^2.0.28"
psycopg2-binary = "^2.9.9"
sentencepiece = "^0.2.0"
gensim = "^4.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
